--- a/build.gradle
+++ b/build.gradle
@@ -34,17 +34,23 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'junit:junit:4.12'
 
-    compile('org.mariadb.jdbc:mariadb-java-client')
+    implementation('org.mariadb.jdbc:mariadb-java-client')
 
     // QueryDSL
-    compile("com.querydsl:querydsl-core") // querydsl
-    compile("com.querydsl:querydsl-jpa") // querydsl
+    implementation("com.querydsl:querydsl-core") // querydsl
+    implementation("com.querydsl:querydsl-jpa") // querydsl
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa" // querydsl JPAAnnotationProcessor 사용 지정
     annotationProcessor group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3'
     annotationProcessor group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '1.3.5'
 
+    testImplementation("com.querydsl:querydsl-core") // querydsl
+    testImplementation("com.querydsl:querydsl-jpa") // querydsl
+    testAnnotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa" // querydsl JPAAnnotationProcessor 사용 지정
+    testAnnotationProcessor group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3'
+    testAnnotationProcessor group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '1.3.5'
+
     // Lombok
-    compileOnly 'org.projectlombok:lombok'
+    implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
@@ -65,8 +71,4 @@ tasks.withType(JavaCompile) {
 
 clean.doLast {
     file(generated).deleteDir()
-}
-
-test {
-    useJUnitPlatform()
 }
