--- a/.travis.yml
+++ b/.travis.yml
@@ -39,11 +39,11 @@ deploy:
     key: mm-server.zip # 빌드 파일을 압축해서 전달
     bundle_type: zip # 압축 확장자
     application: mm-server # 웹 콘솔에서 등록한 CodeDeploy 애플리케이션
-    deployment_group: mm-server # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
+    deployment_group: mm-server-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
     region: ap-northeast-2
     wait-until-deployed: true
 
-# CI 실행 완료 시 메일로 알람 #
+# CI 실행 완료 시 메일로 알람
 notifications:
   email:
     recipients:
