--- a/build.gradle
+++ b/build.gradle
@@ -48,10 +48,10 @@ dependencies {
 
     testImplementation("com.querydsl:querydsl-core") // querydsl
     testImplementation("com.querydsl:querydsl-jpa") // querydsl
-    testAnnotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+    annotationProcessor  "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
     // querydsl JPAAnnotationProcessor 사용 지정
-    testAnnotationProcessor group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3'
-    testAnnotationProcessor group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '1.3.5'
+    annotationProcessor("jakarta.persistence:jakarta.persistence-api")
+    annotationProcessor("jakarta.annotation:jakarta.annotation-api")
 
     // Lombok
     implementation 'org.projectlombok:lombok'
@@ -65,6 +65,9 @@ dependencies {
     compile group: 'com.h2database', name: 'h2', version: "1.4.197"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation 'org.mapstruct:mapstruct:1.4.1.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.1.Final'
 }
 
 def generated = 'src/main/generated'
