feat: Add code for jwt auth

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,9 @@ spring:
 
   session:
     store-type: jdbc
+
+logging:
+  file:
+    name: ${user.dir}/log/test/log
+    max-history: 7
+    max-size: 10MB
