--- a/build.gradle
+++ b/build.gradle
@@ -33,25 +33,22 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc'
     implementation 'junit:junit:4.12'
 
+    compile group: 'com.h2database', name: 'h2', version: "1.4.197"
     implementation('org.mariadb.jdbc:mariadb-java-client')
 
     // QueryDSL
     implementation("com.querydsl:querydsl-core") // querydsl
     implementation("com.querydsl:querydsl-jpa") // querydsl
-    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
-    // querydsl JPAAnnotationProcessor 사용 지정
-    annotationProcessor group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3'
-    annotationProcessor group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '1.3.5'
-
     testImplementation("com.querydsl:querydsl-core") // querydsl
     testImplementation("com.querydsl:querydsl-jpa") // querydsl
-    annotationProcessor  "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
     // querydsl JPAAnnotationProcessor 사용 지정
-    annotationProcessor("jakarta.persistence:jakarta.persistence-api")
-    annotationProcessor("jakarta.annotation:jakarta.annotation-api")
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+    annotationProcessor group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3'
+    annotationProcessor group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '1.3.5'
 
     // Lombok
     implementation 'org.projectlombok:lombok'
@@ -59,12 +56,13 @@ dependencies {
     testImplementation 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
 
-    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.5.0'
-    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.5.0'
+    // jwt
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+    runtime group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+    runtime group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
-    compile group: 'com.h2database', name: 'h2', version: "1.4.197"
-
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.5.0'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.5.0'
 
     implementation 'org.mapstruct:mapstruct:1.4.1.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.1.Final'
