--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     annotationProcessor group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3'
     annotationProcessor group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '1.3.5'
 
+    // mapstruct
+    implementation group: 'org.mapstruct', name: 'mapstruct', version : '1.4.2.Final'
+    annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version : '1.4.2.Final'
     // Lombok
     implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -63,9 +66,6 @@ dependencies {
 
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.5.0'
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.5.0'
-
-    implementation 'org.mapstruct:mapstruct:1.4.1.Final'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.1.Final'
 }
 
 def generated = 'src/main/generated'
