--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     // mapstruct
     implementation group: 'org.mapstruct', name: 'mapstruct', version : '1.4.2.Final'
     annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version : '1.4.2.Final'
+
     // Lombok
     implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -70,6 +71,9 @@ dependencies {
     runtime group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
     implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+
+
 }
 
 def generated = 'src/main/generated'
