--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,8 @@ dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 
-
+    implementation group: 'org.flywaydb', name: 'flyway-core'
+    runtimeOnly group: 'org.flywaydb', name: 'flyway-gradle-plugin'
 }
 
 def generated = 'src/main/generated'
